--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMO+zFrZnXlYakhZq4cis/4",
+      "authorship_tag": "ABX9TyO9pSAoIzygOoWnAvmA0Xd/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,34 +36,11 @@
       }
     },
     {
-      "cell_type": "code",
-      "execution_count": 62,
+      "cell_type": "markdown",
+      "source": [],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
-        },
-        "id": "7Fnb8XpzHAdx",
-        "outputId": "567149f0-c83c-41fa-c4cd-b698dedb084d",
-        "collapsed": true
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: pandas in /usr/local/lib/python3.10/dist-packages (2.0.3)\n",
-            "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.10/dist-packages (from pandas) (2.8.2)\n",
-            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas) (2023.4)\n",
-            "Requirement already satisfied: tzdata>=2022.1 in /usr/local/lib/python3.10/dist-packages (from pandas) (2024.1)\n",
-            "Requirement already satisfied: numpy>=1.21.0 in /usr/local/lib/python3.10/dist-packages (from pandas) (1.25.2)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n"
-          ]
-        }
-      ],
-      "source": [
-        "!pip install pandas\n"
-      ]
+        "id": "dWuE5hVbNdT9"
+      }
     },
     {
       "cell_type": "code",
@@ -73,7 +50,7 @@
       "metadata": {
         "id": "rtRxkVtuHf2f"
       },
-      "execution_count": 81,
+      "execution_count": 88,
       "outputs": []
     },
     {
@@ -114,14 +91,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "jkI8Wt10KkR9",
-        "outputId": "f2afe349-b9a4-4d4b-e83a-af63531cc322",
-        "collapsed": true
+        "outputId": "89147875-1b0a-4a12-f6ef-88b87d960e75"
       },
-      "execution_count": 65,
+      "execution_count": 103,
       "outputs": [
         {
           "output_type": "stream",
@@ -210,14 +185,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
-        "collapsed": true,
         "id": "rWJ1LwRAMSm2",
-        "outputId": "9605cd3f-8d0b-48aa-d918-e424111f3b1e"
+        "outputId": "93d00d75-0a19-412a-f479-17e7ab05aa05"
       },
-      "execution_count": 66,
+      "execution_count": 90,
       "outputs": [
         {
           "output_type": "stream",
@@ -252,14 +225,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
-        "collapsed": true,
         "id": "jxX7ump3M2-w",
-        "outputId": "114d6d35-878e-4046-8b0a-6bf99e85753c"
+        "outputId": "2c335019-7df1-4ed9-a6e9-ad8450b4afde"
       },
-      "execution_count": 67,
+      "execution_count": 91,
       "outputs": [
         {
           "output_type": "stream",
@@ -293,14 +264,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "XbIHPQgCNZ9g",
-        "outputId": "f3c02ab2-a30f-4a1a-b7b4-5d18d05700a6",
+        "outputId": "8e8ab295-b2c7-4f70-cc5a-556872d9b5bd",
         "collapsed": true
       },
-      "execution_count": 68,
+      "execution_count": 92,
       "outputs": [
         {
           "output_type": "stream",
@@ -345,14 +315,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "collapsed": true,
         "id": "RJroW26NN27c",
-        "outputId": "7ec67ab5-3c48-4f38-c6f4-d6f91a65c112"
+        "outputId": "69d63583-80bb-41d7-bb1c-d4e64f8a11ff"
       },
-      "execution_count": 69,
+      "execution_count": 93,
       "outputs": [
         {
           "output_type": "stream",
@@ -446,14 +415,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "ftKM6GKc3uvq",
-        "outputId": "7a830d5f-f392-4241-f485-07c2f1d75a9d",
+        "outputId": "4e3322cb-afce-4ad5-9872-8afb7456b64c",
         "collapsed": true
       },
-      "execution_count": 70,
+      "execution_count": 94,
       "outputs": [
         {
           "output_type": "stream",
@@ -541,20 +509,19 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "dckQ6nOW7giI",
-        "outputId": "800db613-793e-4f75-e52b-ddbed7653940",
+        "outputId": "7a722a89-f5be-400e-fa4e-097b8b3553a1",
         "collapsed": true
       },
-      "execution_count": 71,
+      "execution_count": 95,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Merged admissions_img DataFrame:\n",
+            "admissions_img DataFrame:\n",
             "     ADMISSION.DATE ADMISSION.TIME DISCHARGE.DATE DISCHARGE.TIME  \\\n",
             "0        1998-02-01          07:02     1998-03-31          07:17   \n",
             "1        2010-11-30          04:33     2011-03-25          20:59   \n",
@@ -664,14 +631,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "gFeTeyB6_kUl",
-        "outputId": "51463014-9dd6-4dad-dcfa-d755414e7ff2",
+        "outputId": "50082c02-a2ff-41b1-b0b6-8450fa3aba4b",
         "collapsed": true
       },
-      "execution_count": 72,
+      "execution_count": 104,
       "outputs": [
         {
           "output_type": "stream",
@@ -715,20 +681,18 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "BMy9XrWkCkGY",
-        "outputId": "4bc9b658-b0cf-44c9-ed83-aa6c6e106cb9",
+        "outputId": "a089d8e8-b350-4fc9-bcf4-d47b0cb04038",
         "collapsed": true
       },
-      "execution_count": 73,
+      "execution_count": 105,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Filtered DataFrame (q4_df) with the first performed test for each test_name:\n",
             "     ID       test_name ordered_date_time performed_date performed_time  \\\n",
             "0  1064              US              None     1985-12-17          10:27   \n",
             "1  1064       US PELVIS              None     1985-12-02          11:40   \n",
@@ -767,9 +731,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8S1xJb4jcYCZ",
-        "outputId": "87aeef13-7a29-4381-f17f-7a7706d1c733"
+        "outputId": "bec2347f-ff72-4105-b0e0-17f4a7e99b11"
       },
-      "execution_count": 87,
+      "execution_count": 102,
       "outputs": [
         {
           "output_type": "stream",
@@ -889,18 +853,17 @@
       "metadata": {
         "id": "iX5DJONIKm_u",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bac9968f-c7f9-4053-f989-2da44981c9cf"
+        "outputId": "efa6f1a6-c7c9-414d-e74c-14b749a29e26"
       },
-      "execution_count": 31,
+      "execution_count": 99,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Missing values count in each column:\n",
+            "Missing values count:\n",
             "ADMISSION.DATE          3548\n",
             "ADMISSION.TIME          3548\n",
             "DISCHARGE.DATE          3548\n",
@@ -930,7 +893,7 @@
             "discharge_datetime      2265\n",
             "length_of_stay          2265\n",
             "dtype: int64\n",
-            "Missing rate (%) in each column:\n",
+            "Missing rate (%) :\n",
             "|                      |        0 |\n",
             "|:---------------------|---------:|\n",
             "| ADMISSION.DATE       | 65.6308  |\n",
@@ -978,20 +941,19 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "collapsed": true,
         "id": "onyW3emiBqTa",
-        "outputId": "96fd8da6-7f2f-437a-ca5a-9d804c5e5771"
+        "outputId": "d53e2ba1-ff8c-44f7-bb7e-5b62096ba23c"
       },
-      "execution_count": 75,
+      "execution_count": 100,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Missing rate (%) in each field from q5_df:\n",
+            "Missing rate (%) from q5_df:\n",
             "|                      |   0 |\n",
             "|:---------------------|----:|\n",
             "| ADMISSION.DATE       | nan |\n",
@@ -1075,20 +1037,18 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "W_y9mp1hHOHS",
-        "outputId": "388582ad-8e39-47df-a6c3-59d673e3a360"
+        "outputId": "f6805ffc-e32b-455b-8eba-59c9d805a8c5"
       },
-      "execution_count": 80,
+      "execution_count": 106,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\n",
-            "Frequency table with mapped test and bodypart categories:\n",
+            "Frequency table\n",
             "+----+--------------------+-------------+---------------+-------------------+\n",
             "|    | raw_test_name      |   Frequency | mapped_test   | mapped_bodypart   |\n",
             "+====+====================+=============+===============+===================+\n",
